2007-12-01  Dan Bernstein  <mitz@apple.com>

        Reviewed by Mark Rowe.

        * config.ini: Correct blog name.

2007-11-30  Adam Roben  <aroben@apple.com>

        Add another feed

        * config.ini:

2007-11-30  Adam Roben  <aroben@apple.com>

        Add a simple script to update the site

        * update.pl: Added.

2007-11-30  Adam Roben  <aroben@apple.com>

        Include all WebKit posts from Trolltech Labs

        * config.ini:

2007-11-30  Adam Roben  <aroben@apple.com>

        Initial checkin of Planet WebKit

        Rubberstamped by Sam.

        * README: Added.
        * config.ini: Added.
        * planet/AUTHORS: Added.
        * planet/INSTALL: Added.
        * planet/LICENCE: Added.
        * planet/NEWS: Added.
        * planet/PKG-INFO: Added.
        * planet/README: Added.
        * planet/THANKS: Added.
        * planet/TODO: Added.
        * planet/examples/atom.xml.tmpl: Added.
        * planet/examples/basic/config.ini: Added.
        * planet/examples/basic/index.html.tmpl: Added.
        * planet/examples/fancy/config.ini: Added.
        * planet/examples/fancy/index.html.tmpl: Added.
        * planet/examples/foafroll.xml.tmpl: Added.
        * planet/examples/opml.xml.tmpl: Added.
        * planet/examples/output/images/edd.png: Added.
        * planet/examples/output/images/evolution.png: Added.
        * planet/examples/output/images/feed-icon-10x10.png: Added.
        * planet/examples/output/images/jdub.png: Added.
        * planet/examples/output/images/keybuk.png: Added.
        * planet/examples/output/images/logo.png: Added.
        * planet/examples/output/images/opml.png: Added.
        * planet/examples/output/images/planet.png: Added.
        * planet/examples/output/images/thom.png: Added.
        * planet/examples/output/planet.css: Added.
        * planet/examples/rss10.xml.tmpl: Added.
        * planet/examples/rss20.xml.tmpl: Added.
        * planet/planet-cache.py: Added.